<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lnl_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Goals"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lnl_back"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/color_orange"
                    app:cardCornerRadius="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/social_media" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/color_orange_light"
                    app:cardCornerRadius="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_bee" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/color_orange_light"
                    app:cardCornerRadius="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/social_media" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/color_orange_light"
                    app:cardCornerRadius="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_people" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:elevation="4dp"
                android:padding="4dp"
                app:cardCornerRadius="17dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:orientation="vertical"
                    android:paddingLeft="13dp"
                    android:paddingTop="20dp"
                    android:paddingRight="13dp">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextViewInvestment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:dropDownHeight="155dp"
                        android:focusable="false"
                        android:hint="@string/edittext_investment"
                        android:inputType="none"
                        android:maxLines="1"
                        android:textColor="@color/color_grey"
                        android:textColorHint="@color/color_grey"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="30dp"
                        android:text="Is the equity time or recurring ?"
                        android:textColorHint="@color/color_grey"
                        android:textSize="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fixed"
                            android:textColorHint="@color/color_grey"
                            android:textStyle="bold" />

                        <com.suke.widget.SwitchButton
                            android:id="@+id/switch_button"
                            android:layout_width="40dp"
                            android:layout_height="22dp"
                            android:layout_marginStart="15dp"
                            app:sb_checked="true"
                            app:sb_checked_color="@color/color_blue"
                            app:sb_show_indicator="false" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="Variable"
                            android:textColorHint="@color/color_grey" />

                    </LinearLayout>


                    <EditText
                        android:id="@+id/edit_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/editText_date"
                        android:textColor="@color/color_grey"
                        android:textColorHint="@color/color_grey"
                        android:textSize="15dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/editText_units"
                        android:textColor="@color/color_grey"
                        android:textColorHint="@color/color_grey"
                        android:textSize="15dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/editText_price"
                        android:textColor="@color/color_grey"
                        android:textColorHint="@color/color_grey"
                        android:textSize="15dp" />

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/button_corner"
                        android:gravity="center"
                        android:text="@string/btn_addmore"
                        android:textAllCaps="false"
                        android:textColor="@color/color_white" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="80dp"
            app:backgroundTint="@color/color_green"
            app:srcCompat="@drawable/ic_message_black_24dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>